<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:backgroundTint="@color/grey">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:gravity="center"
        android:text="N G A N T E R . C O M"
        android:textSize="28sp" />

    <!-- Login progress -->
    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/text_desc_login"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp">

            <ImageView
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_margin="8dp"
                android:src="@drawable/ic_email_and_phone"
                android:tint="@android:color/darker_gray"/>
            <EditText
                android:textSize="14sp"
                android:id="@+id/input_phone_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="0dp"
                android:hint="+62"
                android:enabled="false"
                android:textColor="@color/grey_dark"
                android:backgroundTint="@color/black5"
                android:maxLines="1"/>

            <EditText
                android:textSize="14sp"
                android:id="@+id/input_phoneemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_phone"
                android:inputType="phone"
                android:textColor="@color/grey_dark"
                android:backgroundTint="@color/black5"
                android:maxLines="1"/>

        </LinearLayout>



        <TextView
            android:id="@+id/phone_not_registered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:textSize="12sp"
            android:visibility="gone"
            android:textColor="@color/badge"/>

        <Button
            android:id="@+id/input_daftar_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/black10"
            android:textColor="@android:color/white"
            android:text="@string/action_login"
            android:textStyle="bold"
            android:enabled="false" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:weightSum="10"
            android:gravity="center">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="4"
                android:background="@android:color/darker_gray">
            </View>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="11sp"
                android:text="ATAU"
                android:gravity="center"/>

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="4"
                android:background="@android:color/darker_gray">
            </View>
        </LinearLayout>


        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_google"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:buttonSize="wide"/>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:id="@+id/bottom_bar"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:background="@color/colorPrimary">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_ques"
            android:id="@+id/text_question"
            android:textColor="@android:color/white"/>
        <TextView
            android:id="@+id/text_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:clickable="true"
            android:focusable="true"
            android:textAllCaps="true"
            android:text="@string/action_register"
            android:textStyle="bold"
            android:textColor="@color/white"/>
    </LinearLayout>
</RelativeLayout>
